Fix z-index of logo

--- a/style/top.less
+++ b/style/top.less
@@ -12,7 +12,6 @@ div#home {
   img {
     height: 100%;
     width: 10rem;
-    z-index: 3;
   }
   background-color: rgba(255, 255, 255, 0.5);
 }
